# ros2_control_note

./: .gitignore  README.md
src/: .clang-format  .clangd
src/my_robot_urdf/: CMakeLists.txt  my_hardware_controller.xml  package.xml
src/my_robot_urdf/config/: my_control_conf.yaml
src/my_robot_urdf/launch/: my_control.launch.py  test.launch.py
src/my_robot_urdf/rviz/: view_arm.rviz
src/my_robot_urdf/src/: my_hardware_controller.cpp
src/my_robot_urdf/test/: send_gpio_set_get.sh  send_joint_group.sh  send_joint_trajectory.sh
src/my_robot_urdf/urdf/: base.urdf.xacro  my_control.urdf.xacro  my_robot.urdf.xacro  test.urdf.xacro
